--- a/THL.css
+++ b/THL.css
@@ -42,3 +42,12 @@ li a {
 li a:hover {
     background-color: #84B8E7;
     }
+
+footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    text-align: center;
+}
